--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <h1>Half Slider by Start Bootstrap</h1>
-                <p>The background images for the slider are set directly in the HTML using inline CSS. The rest of the styles for this template are contained within the <code>half-slider.css</code>file.</p>
+                <h1>Visualization d'un Panel d'etablissement bancaire</h1>
+                
             </div>
         </div>
 
@@ -80,7 +80,8 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <h1> Réalisé par Mohamed Zaki Chellali et Amine Boumaaz
+                    </h1>
                 </div>
             </div>
             <!-- /.row -->
@@ -94,13 +95,6 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
-
-    <!-- Script to Activate the Carousel -->
-    <script>
-    $('.carousel').carousel({
-        interval: 5000 //changes the speed
-    })
-    </script>
 
 </body>
 
