--- a/index.html
+++ b/index.html
@@ -69,8 +69,12 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <h1>Visualization d'un Panel d'etablissement bancaire</h1>
                 
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <p>This si a sample text, i hope it will work</p>
+                </div>
             </div>
         </div>
 
