--- a/index.html
+++ b/index.html
@@ -39,14 +39,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Start Bootstrap</a>
+                <a class="navbar-brand" href="#">Data Visualization</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li>
-                        <a href="#">Accueil</a>
-                    </li>
                     <li>
                         <a href="http://bl.ocks.org/MohamedZaki/raw/f43971b6746784fe4b6d1f6b32ae0c02">Parallel Coordinates</a>
                     </li>
@@ -73,24 +70,13 @@
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    </br> </br>
+                    <br><br><br><br>
                     <p>This si a sample text, i hope it will work</p>
                 </div>
             </div>
         </div>
 
         <hr>
-
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1> Réalisé par Mohamed Zaki Chellali et Amine Boumaaz
-                    </h1>
-                </div>
-            </div>
-            <!-- /.row -->
-        </footer>
 
     </div>
     <!-- /.container -->
