--- a/index.html
+++ b/index.html
@@ -63,13 +63,16 @@
 
         <div class="row">
             <div class="col-lg-12">
-                
+                <h1>Clustering d’un panel d’établissement bancaire</h1>
             </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <br><br><br><br><br><br>
-                    <p>This si a sample text, i hope it will work</p>
-                </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-8">
+                <h3>Réalisé par:</h3>
+                <ul>
+                    <li>Mohamed Zaki Chellali</li>
+                    <li>Amine Boumaaz</li>
+                </ul>
             </div>
         </div>
 
