--- a/index.html
+++ b/index.html
@@ -41,15 +41,7 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li>
-                        <a href="http://bl.ocks.org/MohamedZaki/raw/f43971b6746784fe4b6d1f6b32ae0c02">Parallel Coordinates</a>
-                    </li>
-                    <li>
-                        <a href="http://bl.ocks.org/MohamedZaki/raw/64dec972dc45aa0f19e7e2b0aedce648">Small Multiples</a>
-                    </li>
-                    <li>
-                        <a href="http://bl.ocks.org/MohamedZaki/raw/694b378d5aad8e5694ae7000c4f57a0a">Radar Chart</a>
-                    </li>
+                   
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -76,6 +68,77 @@
                 </ul>
             </div>
         </div>
+		<div class="row">
+			<div class="col-lg-10">
+				<h3>Description</h3>
+				<p>
+				<b>Contexte:</b>
+				Visualiser les différents clusters obtenu après
+				application d’algorithmes de clustering, ainsi que les 
+				caractéristiques de ces établissements.
+				</p>
+				<p>
+					<b>Problématique:</b> Quelles sont les caractéristiques communes
+					entre les banques de chaque cluster ? Les variables qui caractérisent
+					le mieux chaque cluster ? La qualité de la classification
+					est-elle optimale ?
+				</p>
+			</div>
+		</div>
+		
+		<div class="row">
+			<div class="col-lg-12">
+				<h3>Visulalisations réalisées:</h3>
+			</div>
+		</div>
+
+		
+		<div class="row">
+			<div class="col-lg-4">
+				<h3>
+					<a href="http://bl.ocks.org/MohamedZaki/raw/f43971b6746784fe4b6d1f6b32ae0c02">Parallel Coordinates des etablissements</a>
+				</h3>
+			</div>
+			<div class="col-lg-4">
+				<h3>
+					<a href="http://bl.ocks.org/MohamedZaki/raw/64dec972dc45aa0f19e7e2b0aedce648">Small Multiples des clusters</a>
+				</h3>
+			</div>
+			<div class="col-lg-4">
+				<h3>
+					<a href="http://bl.ocks.org/MohamedZaki/raw/694b378d5aad8e5694ae7000c4f57a0a">Radar chart des clusters</a>
+				</h3>
+			</div>
+		</div>
+		
+		
+		
+		
+		<div class="row">
+			<div class="col-lg-10">
+				<h3>
+					Documents complementaires:
+				</h3>
+			</div>
+		</div>
+			
+		<div class="row">
+			<div class="col-lg-4">
+				<h3>
+					<a href="#">Article</a>
+				</h3>
+			</div>
+			<div class="col-lg-4">
+				<h3>
+					<a href="#">Cahier d'avancement</a>
+				</h3>
+			</div>
+			<div class="col-lg-4">
+				<h3>
+					<a href="#">Code source</a>
+				</h3>
+			</div>
+		</div>
 
         <hr>
 
