--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 			</div>
 			<div class="col-lg-4">
 				<h3>
-					<a href="#">Cahier d'avancement</a>
+					<a href="https://docs.google.com/document/d/11Tc2RyEDGvr_RaOu6_e3V6IjlE4oyvzbhvFAB3LIFn8/edit#">Cahier d'avancement</a>
 				</h3>
 			</div>
 			<div class="col-lg-4">
