--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 		<div class="row">
 			<div class="col-lg-4">
 				<h3>
-					<a href="#">Article</a>
+					<a href="https://github.com/MohamedZaki/DataVisualizationProject/blob/master/article-data-visualization.pdf">Article</a>
 				</h3>
 			</div>
 			<div class="col-lg-4">
@@ -135,7 +135,7 @@
 			</div>
 			<div class="col-lg-4">
 				<h3>
-					<a href="#">Code source</a>
+					<a href="https://github.com/MohamedZaki/DataVisualizationProject">Code source</a>
 				</h3>
 			</div>
 		</div>
