--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="row">
             <br><br>
             <div class="col-lg-12">
-                <h1>Clustering d’un panel d’établissement bancaire</h1>
+                <h1>Clustering d’un panel d’établissements bancaires</h1>
             </div>
         </div>
         <div class="row">
@@ -96,12 +96,12 @@
 		<div class="row">
 			<div class="col-lg-4">
 				<h3>
-					<a href="http://bl.ocks.org/MohamedZaki/raw/f43971b6746784fe4b6d1f6b32ae0c02">Parallel Coordinates des etablissements</a>
+					<a href="http://bl.ocks.org/MohamedZaki/raw/f43971b6746784fe4b6d1f6b32ae0c02">Parallel Coordinates des clusters</a>
 				</h3>
 			</div>
 			<div class="col-lg-4">
 				<h3>
-					<a href="http://bl.ocks.org/MohamedZaki/raw/64dec972dc45aa0f19e7e2b0aedce648">Small Multiples des clusters</a>
+					<a href="http://bl.ocks.org/MohamedZaki/raw/64dec972dc45aa0f19e7e2b0aedce648">Small Multiples Barcharts des clusters</a>
 				</h3>
 			</div>
 			<div class="col-lg-4">
