--- a/index.html
+++ b/index.html
@@ -73,9 +73,13 @@
 				<h3>Description</h3>
 				<p>
 				<b>Contexte:</b>
-				Visualiser les différents clusters obtenu après
-				application d’algorithmes de clustering, ainsi que les 
-				caractéristiques de ces établissements.
+				Dans le cadre du suivi conjoncturel du marché du crédit à la consommation,
+				il est essentiel d'avoir accès à certains indicateurs financiers permettant
+				de refléter la santé général des établissements spécialisés.
+				Cependant après la crise financière ainsi que les différentes régulations imposés sur ce secteur,
+				la distinction entre les institutions financières spécialisés
+				dans le crédit à la consommation et les autres types d'acteurs est devenu plus ambiguës,
+				d'où l'intérêt de procéder à une classification de ces établissements
 				</p>
 				<p>
 					<b>Problématique:</b> Quelles sont les caractéristiques communes
